--- a/views/sass/oxxo/components/stacked.sass
+++ b/views/sass/oxxo/components/stacked.sass
@@ -5,6 +5,9 @@
     padding: 0.65rem
   &.grid
     margin: 0px
+  & > * 
+    padding: 0.35rem
+    padding-left: 0.75rem
   & > *:nth-child(odd)
     border-left: 4px solid $primary
   & > *:nth-child(even)
