--- a/views/sass/oxxo/util/colors.sass
+++ b/views/sass/oxxo/util/colors.sass
@@ -43,6 +43,7 @@ $boxed-background: #eee !default
 
 //normal content background
 $content-bg: #fff !default
+$content-bg-dark: #4a4a4a !default
 
 $shadow-color: rgba(0,0,0,0.5) !default
 $shadow-settings: 5px 5px 0px 0px !default
