honour port env variable, meta description

--- a/views/error.html
+++ b/views/error.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <title>ngp - nicer green pass</title>
-  <meta name="description" content="" />
+  <meta name="description" content="nicer green pass" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <style>
     @import "https://fonts.googleapis.com/css?family=Lato|Montserrat";
